--- a/src/sass/components/TheSearch.scss
+++ b/src/sass/components/TheSearch.scss
@@ -52,7 +52,7 @@
             display: flex;
             align-items: center;
             justify-content: space-between;
-            padding: 1.3rem 1.6rem;
+            padding: 1.2rem 1.6rem;
             width: 10rem;
             height: 1.4rem;
             background-color: $color-white;
@@ -88,7 +88,7 @@
         &__item{
             display: flex;
             height: 1.3rem;
-            padding: 0 .8rem;
+            padding: .3rem 1.2rem;
             cursor: pointer;
             align-items: center;
 
