--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -14,6 +14,7 @@
 html{
     box-sizing: border-box;
     font-size: 62.5%;
+
 }
 
 body{
@@ -24,5 +25,6 @@ body{
 }
 
 #app{
+    height: 100vh;
     background-color: $bg-color-light;
 }
