--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -1,9 +1,14 @@
 $color1: hsl(200, 15%, 8%);
+$color2: hsl(0, 0%, 100%);
+
 $color-white: hsl(0, 0%, 100%);
 $color-black: #000;
 
 $bg-color-light: hsl(0, 0%, 98%);
+$bg-color-dark: hsl(207, 26%, 17%);
+
 $color-input-light: hsl(0, 0%, 52%);
+$color-input-dark: hsl(209, 23%, 22%);
 
 $box-shadow: 3px 3px 10px 3px rgba(0,0,0,0.1);
 $b-radius: .4rem;
