--- a/src/sass/components/TheHeader.scss
+++ b/src/sass/components/TheHeader.scss
@@ -11,9 +11,19 @@
     color: $color1;
     box-shadow: 0 4px 6px -2px rgba($color-black, .1);
 
+
+    @include respond(tab-land){
+        padding: 0 3rem;
+    }
+
+    @include respond(phone){
+        padding: 0 1rem;
+    }
+
     &__title{
         font-size: 1.6rem;
         font-weight: 900;
+
     }
 
     &__text{
@@ -21,6 +31,8 @@
         font-weight: 300;
         display: flex;
         align-items: center;
+
+        
         
     }
 
@@ -28,11 +40,13 @@
         background-color: $color-white;
         border: none;
         cursor: pointer;
+        
     }
 
     &__icon{
         height: 1.2rem;
         width: 1.2rem;
         padding-right: .6rem;
+
     }
 }
