--- a/src/sass/components/TheTable.scss
+++ b/src/sass/components/TheTable.scss
@@ -2,9 +2,21 @@
     display: flex;
     flex-direction:row;
     align-items: center;
-    padding: 0 5rem;
+    padding: 0 5.3rem;
 
     margin-top: -15rem;
+
+    @include respond(tab-land){
+        padding: 0 1rem;
+    }
+
+    @include respond(tab-port){
+        padding: 0 0;
+    }
+
+    @include respond(phone){
+        margin-top: -10rem;
+    }
 
     &__item{
         display: flex;
@@ -13,5 +25,13 @@
         flex-wrap: wrap;
         margin-right: 1.6rem;
         list-style: none;
+    }
+
+    @include respond(tab-land){
+        margin-right: 1rem;
+    }
+
+    @include respond(tab-port){
+        margin-right: 0;
     }
 }
