--- a/src/sass/components/TheHeader.scss
+++ b/src/sass/components/TheHeader.scss
@@ -5,7 +5,7 @@
     align-items: center;
     padding: 0 8rem;
     top: 0;
-    height: 9vh;
+    height: 5rem;
 
     background-color: $color-white;
     color: $color1;
