--- a/src/sass/pages/_Details.scss
+++ b/src/sass/pages/_Details.scss
@@ -1,8 +1,22 @@
+.page{
+    background-color: $bg-color-light;
+    height:120vh;
+}
+
 .content{
     display: flex;
-    padding: 5rem 18rem;
+    padding: 5rem 14rem;
     justify-content: space-between;
     align-items: center;
+
+    @include respond(tab-land){
+        padding: 4rem 7rem;
+    }
+
+    @include respond(tab-port){
+        padding: 4rem 3rem;
+    }
+
 
     //link
     &__link{
@@ -13,6 +27,7 @@
        box-shadow: $box-shadow;
        border-radius: $b-radius;
        background-color: $color-white;
+       top: 8rem;
     
        text-decoration: none;
        color: inherit;
@@ -28,39 +43,71 @@
     display: flex;
     align-items: center;
     flex-direction: row;
-    padding: 0 18rem;
+    padding: 0 14rem;
     justify-content:flex-start;
-    height: 50rem;
-    width: 80rem;
-    margin-top: -14rem;
+
+    @include respond(tab-land){
+        padding: 0 7rem;
+    }
+
+    @include respond(tab-port){
+        flex-direction: column;
+        padding: 0 3rem;
+    }
+
+    @include respond(phone){
+        padding: 1rem 0;
+    }
+       
 
     &__imagem{
-        height: 50%;
-        flex:0 0 45%;
-        border-radius: $b-radius;
+        flex:0 0 50%;
         overflow: hidden;
+
+        @include respond(tab-land){
+            flex:0 0 40%;
+        }
+    }
+
+    img{
+        width: 100%;
+        height: 100%;
+        border-radius: $b-radius;
     }
 
     &__info{
-        height: 50%;
-        flex: 0 0 40%;
+        flex: 0 0 50%;
         display: flex;
         flex-direction: column;
         align-items: flex-start;
         justify-content: space-around;
-        margin-left: 10rem;
+        margin-left: 9rem;
+
+        @include respond(tab-land){
+            flex:0 0 50%;
+            margin-left: 4rem;
+        }
+
+        @include respond(phone){
+            margin-left: 2rem;
+        }
         
 
         &-lista{
             list-style: none;
             display: flex;
-            margin-top:-2rem;
+            margin-top: 2rem;
             padding: 1rem 0;
             flex-wrap: wrap;
+
 
             &-item{
                 flex: 0 0 50%;
                 margin-bottom: .7rem;
+
+                @include respond(tab-land){
+                    flex:0 0 50%;
+                }
 
                 &--language{
                     display:inline-block;
@@ -80,6 +127,10 @@
                 flex-direction: row;
                 align-items: center;
                 justify-content: space-between;
+
+                @include respond(tab-land){
+                    flex-direction: column;
+                }
                 
 
             &-lista{
